Bug 396749 - [kauth] NTFS partitions not recognized
Summary: [kauth] NTFS partitions not recognized
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-22 11:33 UTC by Mattia
Modified: 2018-07-22 11:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mattia 2018-07-22 11:33:04 UTC
Using kauth branch, NTFS partitions are not correctly recognized, they're detected as "unformatted".
Comment 1 Andrius Štikonas 2018-07-22 11:42:45 UTC
Git commit 75bfd09c9c24a13a7589a13aa46c4fd149d30471 by Andrius Štikonas.
Committed on 22/07/2018 at 11:42.
Pushed by stikonas into branch 'kauth'.

Fix detection of NTFS partitions

M  +1    -1    src/plugins/sfdisk/sfdiskbackend.cpp

https://commits.kde.org/kpmcore/75bfd09c9c24a13a7589a13aa46c4fd149d30471