Fix detection of NTFS partitions

BUG: 396749